crates/hdk_derive/tests/hdk_extern/validate_invalid_return.stderr
error: `validate` must return `ExternResult<ValidateCallbackResult>`
 --> tests/hdk_extern/validate_invalid_return.rs:4:18
  |
4 | fn validate() -> String {
  |                  ^^^^^^
