crates/hdk_derive/tests/hdk_extern/validate_invalid_return.rs
use hdk_derive::*;

#[hdk_extern] 
fn validate() -> String {
    "wrong return type".into()
}

fn main() {}
